# nihao

./: .gitignore  CLEANUP_SUMMARY.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  PAM_SILENCE.md  README.md  install.sh  nihao.sh  uninstall.sh
.claude/: settings.local.json
config/: nihao.toml  nihao.toml.example  nihao.toml.hybrid  nihao.toml.ir-camera
nihao-cli/: Cargo.toml
nihao-cli/src/: main.rs
nihao-core/: Cargo.toml
nihao-core/src/: align.rs  capture.rs  compare.rs  config.rs  detect.rs  embed.rs  lib.rs  password.rs  runtime.rs  store.rs
pam-nihao/: Cargo.toml
pam-nihao/src/: lib.rs
scripts/: download_models.sh
