[package]
name = "nihao-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
nihao-core = { path = "../nihao-core" }
clap.workspace = true
anyhow.workspace = true
env_logger.workspace = true
log.workspace = true
rpassword.workspace = true

[[bin]]
name = "nihao"
path = "src/main.rs"
