[package]
name = "nihao-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
ort.workspace = true
ndarray.workspace = true
image.workspace = true
imageproc.workspace = true
v4l.workspace = true
bincode.workspace = true
chrono.workspace = true
log.workspace = true

[lib]
name = "nihao_core"
path = "src/lib.rs"
